Bump libraries versions, resolved some CVEs, cleaned up some code